--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -133,7 +133,7 @@
    "source": [
     "model_name=\"bert-base-chinese\"\n",
     "local_dir=\"../../pretrained/${model_name}\"\n",
-    "huggingface-cli download $model_name --exclude \"*.safetensors\" --exclude \"*.h5\" --exclude \"*.ot\" --exclude \"*.safetensors\" --exclude \"*.msgpack\" --local-dir $local_dir --local-dir-use-symlinks False"
+    "huggingface-cli download $model_name --exclude \"*.safetensors\" --exclude \"*.h5\" --exclude \"*.ot\" --exclude \"*.msgpack\" --local-dir $local_dir --local-dir-use-symlinks False"
    ]
   },
   {
@@ -1323,6 +1323,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LCQMC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1473,6 +1480,230 @@
     "\n",
     "score = self_bleu(s, language=\"zh\", smoothing_level=1)\n",
     "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question1</th>\n",
+       "      <th>question2</th>\n",
+       "      <th>label</th>\n",
+       "      <th>rephrase1</th>\n",
+       "      <th>rephrase2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>喜欢打篮球的男生喜欢什么样的女生</td>\n",
+       "      <td>爱打篮球的男生喜欢什么样的女生</td>\n",
+       "      <td>1</td>\n",
+       "      <td>喜欢打篮球的男生通常喜欢什么样的女生？</td>\n",
+       "      <td>喜欢打篮球的男生喜欢怎样的女生？</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>我手机丢了，我想换个手机</td>\n",
+       "      <td>我想买个新手机，求推荐</td>\n",
+       "      <td>1</td>\n",
+       "      <td>由于我的手机丢失了，我打算更换一部新的手机。</td>\n",
+       "      <td>请问有什么好的手机推荐吗？我打算购买一个新的。</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>大家觉得她好看吗</td>\n",
+       "      <td>大家觉得跑男好看吗？</td>\n",
+       "      <td>0</td>\n",
+       "      <td>大家认为她长得漂亮吗？</td>\n",
+       "      <td>大家认为《奔跑吧》这个节目怎么样？</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>求秋色之空漫画全集</td>\n",
+       "      <td>求秋色之空全集漫画</td>\n",
+       "      <td>1</td>\n",
+       "      <td>请问哪里可以找到秋色之空漫画的全集？</td>\n",
+       "      <td>请问哪里可以找到秋色之空全集的漫画？</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>晚上睡觉带着耳机听音乐有什么害处吗？</td>\n",
+       "      <td>孕妇可以戴耳机听音乐吗?</td>\n",
+       "      <td>0</td>\n",
+       "      <td>戴着耳机在晚上睡觉听音乐会有哪些不良影响？</td>\n",
+       "      <td>孕妇是否可以使用耳机听音乐？</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            question1        question2  label               rephrase1  \\\n",
+       "0    喜欢打篮球的男生喜欢什么样的女生  爱打篮球的男生喜欢什么样的女生      1     喜欢打篮球的男生通常喜欢什么样的女生？   \n",
+       "1        我手机丢了，我想换个手机      我想买个新手机，求推荐      1  由于我的手机丢失了，我打算更换一部新的手机。   \n",
+       "2            大家觉得她好看吗       大家觉得跑男好看吗？      0             大家认为她长得漂亮吗？   \n",
+       "3           求秋色之空漫画全集        求秋色之空全集漫画      1      请问哪里可以找到秋色之空漫画的全集？   \n",
+       "4  晚上睡觉带着耳机听音乐有什么害处吗？     孕妇可以戴耳机听音乐吗?      0   戴着耳机在晚上睡觉听音乐会有哪些不良影响？   \n",
+       "\n",
+       "                 rephrase2  \n",
+       "0         喜欢打篮球的男生喜欢怎样的女生？  \n",
+       "1  请问有什么好的手机推荐吗？我打算购买一个新的。  \n",
+       "2        大家认为《奔跑吧》这个节目怎么样？  \n",
+       "3       请问哪里可以找到秋色之空全集的漫画？  \n",
+       "4           孕妇是否可以使用耳机听音乐？  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dataset = \"LCQMC\"\n",
+    "split = \"train\"\n",
+    "\n",
+    "output_file = f\"data/{dataset}/{split}/qwen_with_rephrase_clean_nodrop.jsonl\"\n",
+    "df = pd.read_json(output_file, lines=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61422cb30fb24381952e1aff2996a67f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Calculating rouge:   0%|          | 0/477532 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'rougeL': 0.5372641115171586}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from toolkit.metric import rouge\n",
+    "\n",
+    "preds = []\n",
+    "labels = []\n",
+    "for _, row in df.iterrows():\n",
+    "    preds.extend([row[\"rephrase1\"], row[\"rephrase2\"]])\n",
+    "    labels.extend([row[\"question1\"], row[\"question2\"]])\n",
+    "    # s.append([row[\"question1\"], row[\"rephrase1\"]])\n",
+    "    # s.append([row[\"question2\"], row[\"rephrase2\"]])\n",
+    "\n",
+    "score = rouge(preds, labels, \"zh\")\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-04-13 01:16:25,961] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ded0ae10e724bd193c4d79aee5a6232",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/238766 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from toolkit.metric import rouge\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "ret = []\n",
+    "for _, row in tqdm(df.iterrows(), total=len(df)):\n",
+    "    ret.append({\"ori\": row[\"question1\"], \"rep\": row[\"rephrase1\"], \"rougeL\": rouge(row[\"rephrase1\"], row[\"question1\"], \"zh\", tqdm=False)[\"rougeL\"]})\n",
+    "    ret.append({\"ori\": row[\"question2\"], \"rep\": row[\"rephrase2\"], \"rougeL\": rouge(row[\"rephrase2\"], row[\"question2\"], \"zh\", tqdm=False)[\"rougeL\"]})\n",
+    "    # break\n",
+    "\n",
+    "df_rougel = pd.DataFrame(ret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _, row in df_rougel[df_rougel[\"rougeL\"] < 0.3].iterrows():\n",
+    "    print(row[\"ori\"], \"\\t\", row[\"rep\"], \"\\t\", row[\"rougeL\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "怎么学会沟通 \t 如何掌握沟通技巧？ \t 0.2666666805744171\n",
+    "什么鬼片好看 \t 哪些恐怖电影值得一看？\n",
+    "怎么保养皮肤好 \t 如何做好皮肤保养？ \t 0.25\n",
+    "房子装修流程是什么？ \t 装修房子需要遵循哪些步骤？ \t 0.260869562625885\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### QQP"
    ]
   },
   {
@@ -1645,6 +1876,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96f7d51a8d1a4c088bb0aece9afb433e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from toolkit.metric import rouge\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "ret = []\n",
+    "df = df[:10000]\n",
+    "for _, row in tqdm(df.iterrows(), total=len(df)):\n",
+    "    ret.append({\"ori\": row[\"question1\"], \"rep\": row[\"rephrase1\"], \"rougeL\": rouge(row[\"rephrase1\"], row[\"question1\"], \"en\", tqdm=False)[\"rougeL\"]})\n",
+    "    ret.append({\"ori\": row[\"question2\"], \"rep\": row[\"rephrase2\"], \"rougeL\": rouge(row[\"rephrase2\"], row[\"question2\"], \"en\", tqdm=False)[\"rougeL\"]})\n",
+    "    # break\n",
+    "\n",
+    "df_rougel = pd.DataFrame(ret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4216"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(df_rougel[\"rougeL\"] < 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _, row in df_rougel[df_rougel[\"rougeL\"] < 0.2].iterrows():\n",
+    "    print(row[\"ori\"], \"\\t\", row[\"rep\"], \"\\t\", row[\"rougeL\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "How do I lose weight fast? \t What's a quick way to shed pounds? \t 0.0\n",
+    "What is the best way to reduce weight fast? \t How can one quickly lose weight effectively? \t 0.125\n",
+    "How can I speak English fluently and fast? \t What are the ways to achieve fluent and rapid speaking in English? \t 0.10000000149011612\n",
+    "What do I do to increase my height? \t How can I grow taller? \t 0.1538461595773697"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BQ"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -1693,6 +2014,13 @@
     "\n",
     "score = self_bleu(s, language=\"zh\", smoothing_level=1)\n",
     "score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MRPC"
    ]
   },
   {
