--- a/aio.ipynb
+++ b/aio.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-16 22:06:11,217\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
+      "2024-04-17 13:51:31,635\u001b[32m <INFO> WatchDog: success/total: 8/8\u001b[0m\n",
       "{97: {'val': {'accuracy': 86.18, 'F1-score': 85.99, 'loss': 0.39},\n",
       "      'test': {'accuracy': 85.32, 'F1-score': 85.26, 'loss': 0.42}},\n",
       " 53: {'val': {'accuracy': 85.36, 'F1-score': 84.59, 'loss': 0.54},\n",
@@ -45,7 +45,7 @@
       "{'val': {'accuracy': 85.72, 'F1-score': 85.23, 'loss': 0.45},\n",
       " 'test': {'accuracy': 85.08, 'F1-score': 84.7, 'loss': 0.46}}\n",
       "---------TWR---------\n",
-      "2024-04-16 22:06:11,223\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-04-17 13:51:31,640\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  97 53 10 43 46\n",
       "{97: {'val': {'accuracy': 86.07, 'F1-score': 85.67, 'loss': 2.16},\n",
       "      'test': {'accuracy': 86.37, 'F1-score': 86.08, 'loss': 2.16}},\n",
@@ -139,74 +139,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------TWR-H---------\n"
+      "---------TWR-H---------\n",
+      "109 38 50 68 11\n",
+      "{10: {'val': {'accuracy': 85.26, 'F1-score': 84.42, 'loss': 2.65},\n",
+      "      'test': {'accuracy': 85.67, 'F1-score': 85.01, 'loss': 2.59}},\n",
+      " 97: {'val': {'accuracy': 85.44, 'F1-score': 84.69, 'loss': 2.61},\n",
+      "      'test': {'accuracy': 85.6, 'F1-score': 84.93, 'loss': 2.6}},\n",
+      " 46: {'val': {'accuracy': 85.67, 'F1-score': 84.94, 'loss': 2.26},\n",
+      "      'test': {'accuracy': 85.56, 'F1-score': 84.94, 'loss': 2.27}},\n",
+      " 43: {'val': {'accuracy': 85.94, 'F1-score': 85.32, 'loss': 2.24},\n",
+      "      'test': {'accuracy': 85.53, 'F1-score': 85.02, 'loss': 2.31}},\n",
+      " 53: {'val': {'accuracy': 85.64, 'F1-score': 84.95, 'loss': 2.47},\n",
+      "      'test': {'accuracy': 84.87, 'F1-score': 84.22, 'loss': 2.54}}}\n",
+      "{'val': {'accuracy': 85.59, 'F1-score': 84.86, 'loss': 2.45},\n",
+      " 'test': {'accuracy': 85.45, 'F1-score': 84.82, 'loss': 2.46}}\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800000; text-decoration-color: #800000\">╭─────────────────────────────── </span><span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">Traceback </span><span style=\"color: #bf7f7f; text-decoration-color: #bf7f7f; font-weight: bold\">(most recent call last)</span><span style=\"color: #800000; text-decoration-color: #800000\"> ────────────────────────────────╮</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">&lt;module&gt;</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">11</span>                                                                                   <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 8 │   </span>seeds_dir = <span style=\"color: #808000; text-decoration-color: #808000\">f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_mod</span>    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 9 │   </span>seeds_dir = <span style=\"color: #808000; text-decoration-color: #808000\">f\"outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_mod</span>    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">10 │   </span>seeds_dir = Path(seeds_dir)                                                             <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>11 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   </span>_metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=<span style=\"color: #0000ff; text-decoration-color: #0000ff\">True</span>)          <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">12 │   </span>_metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, <span style=\"color: #0000ff; text-decoration-color: #0000ff\">1</span>)                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">13 │   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">if</span> _mean:                                                                               <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">14 │   │   </span>metric_dicts[seed_of_stage1] = _mean                                                <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #bfbf7f; text-decoration-color: #bfbf7f\">/home/jjwang/codes/toolkit/toolkit/training/</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">watchdog.py</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">333</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">metric_dicts_from_diff_seeds</span>      <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">330 </span><span style=\"color: #bfbf7f; text-decoration-color: #bfbf7f\">│   │   </span><span style=\"color: #808000; text-decoration-color: #808000\">return: `dict[seed][split] = MetricDict`</span>                                           <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">331 </span><span style=\"color: #bfbf7f; text-decoration-color: #bfbf7f\">│   │   </span><span style=\"color: #808000; text-decoration-color: #808000\">\"\"\"</span>                                                                                <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">332 │   │   </span>seeds_dir = Path(seeds_dir)                                                        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>333 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   │   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">assert</span> seeds_dir.exists(), <span style=\"color: #808000; text-decoration-color: #808000\">f\"Seeds directory dose NOT exist: `{</span>seeds_dir<span style=\"color: #808000; text-decoration-color: #808000\">}`\"</span>        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">334 │   │   </span>seed_dirs = <span style=\"color: #00ffff; text-decoration-color: #00ffff\">list</span>(seeds_dir.iterdir())                                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">335 │   │   # seed_dirs = list(seeds_dir.glob(\"*\"))</span>                                            <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">336 │   │   </span>success = <span style=\"color: #0000ff; text-decoration-color: #0000ff\">0</span>                                                                        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">╰──────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
-       "<span style=\"color: #ff0000; text-decoration-color: #ff0000; font-weight: bold\">AssertionError: </span>Seeds directory dose NOT exist: \n",
-       "`outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_mod<span style=\"color: #808000; text-decoration-color: #808000\">el_hardcases_from_baseline_warmboost_fix_num</span>\n",
-       "<span style=\"color: #808000; text-decoration-color: #808000\">_ratio</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.2</span>/<span style=\"color: #808000; text-decoration-color: #808000\">seed_of_stage1</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">97</span>/<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>/<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">16</span>/<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3e-05</span>`\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[31m╭─\u001b[0m\u001b[31m──────────────────────────────\u001b[0m\u001b[31m \u001b[0m\u001b[1;31mTraceback \u001b[0m\u001b[1;2;31m(most recent call last)\u001b[0m\u001b[31m \u001b[0m\u001b[31m───────────────────────────────\u001b[0m\u001b[31m─╮\u001b[0m\n",
-       "\u001b[31m│\u001b[0m in \u001b[92m<module>\u001b[0m:\u001b[94m11\u001b[0m                                                                                   \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m 8 \u001b[0m\u001b[2m│   \u001b[0mseeds_dir = \u001b[33mf\u001b[0m\u001b[33m\"\u001b[0m\u001b[33moutputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_mod\u001b[0m    \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m 9 \u001b[0m\u001b[2m│   \u001b[0mseeds_dir = \u001b[33mf\u001b[0m\u001b[33m\"\u001b[0m\u001b[33moutputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_mod\u001b[0m    \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m10 \u001b[0m\u001b[2m│   \u001b[0mseeds_dir = Path(seeds_dir)                                                             \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m11 \u001b[2m│   \u001b[0m_metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=\u001b[94mTrue\u001b[0m)          \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m12 \u001b[0m\u001b[2m│   \u001b[0m_metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, \u001b[94m1\u001b[0m)                              \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m13 \u001b[0m\u001b[2m│   \u001b[0m\u001b[94mif\u001b[0m _mean:                                                                               \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m14 \u001b[0m\u001b[2m│   │   \u001b[0mmetric_dicts[seed_of_stage1] = _mean                                                \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m \u001b[2;33m/home/jjwang/codes/toolkit/toolkit/training/\u001b[0m\u001b[1;33mwatchdog.py\u001b[0m:\u001b[94m333\u001b[0m in \u001b[92mmetric_dicts_from_diff_seeds\u001b[0m      \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m330 \u001b[0m\u001b[2;33m│   │   \u001b[0m\u001b[33mreturn: `dict[seed][split] = MetricDict`\u001b[0m                                           \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m331 \u001b[0m\u001b[2;33m│   │   \u001b[0m\u001b[33m\"\"\"\u001b[0m                                                                                \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m332 \u001b[0m\u001b[2m│   │   \u001b[0mseeds_dir = Path(seeds_dir)                                                        \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m333 \u001b[2m│   │   \u001b[0m\u001b[94massert\u001b[0m seeds_dir.exists(), \u001b[33mf\u001b[0m\u001b[33m\"\u001b[0m\u001b[33mSeeds directory dose NOT exist: `\u001b[0m\u001b[33m{\u001b[0mseeds_dir\u001b[33m}\u001b[0m\u001b[33m`\u001b[0m\u001b[33m\"\u001b[0m        \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m334 \u001b[0m\u001b[2m│   │   \u001b[0mseed_dirs = \u001b[96mlist\u001b[0m(seeds_dir.iterdir())                                              \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m335 \u001b[0m\u001b[2m│   │   \u001b[0m\u001b[2m# seed_dirs = list(seeds_dir.glob(\"*\"))\u001b[0m                                            \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m336 \u001b[0m\u001b[2m│   │   \u001b[0msuccess = \u001b[94m0\u001b[0m                                                                        \u001b[31m│\u001b[0m\n",
-       "\u001b[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
-       "\u001b[1;91mAssertionError: \u001b[0mSeeds directory dose NOT exist: \n",
-       "`outputs/BQ/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_mod\u001b[33mel_hardcases_from_baseline_warmboost_fix_num\u001b[0m\n",
-       "\u001b[33m_ratio\u001b[0m=\u001b[1;36m0\u001b[0m\u001b[1;36m.2\u001b[0m/\u001b[33mseed_of_stage1\u001b[0m=\u001b[1;36m97\u001b[0m/\u001b[1;36m1\u001b[0m/\u001b[1;36m16\u001b[0m/\u001b[1;36m3e-05\u001b[0m`\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -29921,6 +29875,71 @@
     "print(\"acc: \", round(accuracy_score(df_filtered['label'], df_filtered['pred'])*100, 2))\n",
     "print(\"f1: \", round(f1_score(df_filtered['label'], df_filtered['pred'])*100, 2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Qwen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "332\n",
+      "acc:  83.48\n",
+      "f1:  78.16\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Qwen\n",
+    "## zero few shot\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "\n",
+    "\n",
+    "# df = pd.read_json(\"results/qwen-14b-chat/LCQMC/zero_shot/test_0-999999.jsonl\", lines=True)\n",
+    "# df = pd.read_json(\"results/qwen-14b-chat/LCQMC/few_shot_1/test_0-999999.jsonl\", lines=True)\n",
+    "# df = pd.read_json(\"results/qwen-14b-chat/LCQMC/few_shot_5/test_0-999999.jsonl\", lines=True)\n",
+    "# df = pd.read_json(\"results/qwen-14b-chat/LCQMC/few_shot_10/test_0-999999.jsonl\", lines=True)\n",
+    "\n",
+    "df = pd.read_json(\"results/qwen-14b-chat/QQP/zero_shot/val_0-999999.jsonl\", lines=True)\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "\n",
+    "def to_pred(response: str):\n",
+    "    if re.search(\"yes|是\", response, re.IGNORECASE):\n",
+    "        return 1\n",
+    "    elif re.search(\"no|否\", response, re.IGNORECASE):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return response\n",
+    "\n",
+    "\n",
+    "df[\"pred\"] = df[\"response\"].map(to_pred)\n",
+    "fail_mask = ~((df[\"pred\"] == 1) | (df[\"pred\"] == 0))\n",
+    "print(sum(fail_mask))\n",
+    "# df[fail_mask].head()\n",
+    "df_filtered = df[~fail_mask]\n",
+    "df_filtered = df_filtered.astype({\"pred\": int, \"label\": int})\n",
+    "print(\"acc: \", round(accuracy_score(df_filtered[\"label\"], df_filtered[\"pred\"]) * 100, 2))\n",
+    "print(\"f1: \", round(f1_score(df_filtered[\"label\"], df_filtered[\"pred\"]) * 100, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
