--- a/aio.ipynb
+++ b/aio.ipynb
@@ -29885,16 +29885,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "332\n",
+      "----------------LCQMC----------------\n",
+      "### shot_num=0 ###\n",
+      "failed:  23\n",
+      "acc:  84.18\n",
+      "f1:  85.74\n",
+      "### shot_num=1 ###\n",
+      "failed:  0\n",
+      "acc:  78.54\n",
+      "f1:  81.68\n",
+      "### shot_num=5 ###\n",
+      "unknown\n",
+      "----------------BQ----------------\n",
+      "### shot_num=0 ###\n",
+      "failed:  0\n",
+      "acc:  73.38\n",
+      "f1:  68.62\n",
+      "### shot_num=1 ###\n",
+      "failed:  0\n",
+      "acc:  74.85\n",
+      "f1:  72.85\n",
+      "### shot_num=5 ###\n",
+      "failed:  0\n",
+      "acc:  75.68\n",
+      "f1:  76.75\n",
+      "----------------QQP----------------\n",
+      "### shot_num=0 ###\n",
+      "failed:  332\n",
       "acc:  83.48\n",
-      "f1:  78.16\n"
+      "f1:  78.16\n",
+      "### shot_num=1 ###\n",
+      "unknown\n",
+      "### shot_num=5 ###\n",
+      "failed:  0\n",
+      "acc:  81.74\n",
+      "f1:  76.02\n",
+      "----------------MRPC----------------\n",
+      "### shot_num=0 ###\n",
+      "failed:  0\n",
+      "acc:  73.04\n",
+      "f1:  82.49\n",
+      "### shot_num=1 ###\n",
+      "failed:  0\n",
+      "acc:  75.42\n",
+      "f1:  83.59\n",
+      "### shot_num=5 ###\n",
+      "failed:  0\n",
+      "acc:  76.87\n",
+      "f1:  84.31\n"
      ]
     }
    ],
@@ -29903,16 +29948,22 @@
     "## zero few shot\n",
     "import pandas as pd\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
-    "\n",
+    "import re\n",
+    "from io import StringIO\n",
     "\n",
     "# df = pd.read_json(\"results/qwen-14b-chat/LCQMC/zero_shot/test_0-999999.jsonl\", lines=True)\n",
     "# df = pd.read_json(\"results/qwen-14b-chat/LCQMC/few_shot_1/test_0-999999.jsonl\", lines=True)\n",
     "# df = pd.read_json(\"results/qwen-14b-chat/LCQMC/few_shot_5/test_0-999999.jsonl\", lines=True)\n",
     "# df = pd.read_json(\"results/qwen-14b-chat/LCQMC/few_shot_10/test_0-999999.jsonl\", lines=True)\n",
     "\n",
-    "df = pd.read_json(\"results/qwen-14b-chat/QQP/zero_shot/val_0-999999.jsonl\", lines=True)\n",
+    "# df = pd.read_json(\"results/qwen-14b-chat/QQP/zero_shot/val_0-999999.jsonl\", lines=True)\n",
+    "# df = pd.read_json(\"results/qwen-14b-chat/QQP/few_shot_5/val_0-999999.jsonl\", lines=True)\n",
     "\n",
-    "import re\n",
+    "\n",
+    "# df = pd.read_json(\"results/qwen-14b-chat/MRPC/zero_shot/test_0-999999.jsonl\", lines=True)\n",
+    "\n",
+    "datasets = [\"LCQMC\", \"BQ\", \"QQP\", \"MRPC\"]\n",
+    "case_num = [0, 1, 5]\n",
     "\n",
     "\n",
     "def to_pred(response: str):\n",
@@ -29924,14 +29975,27 @@
     "        return response\n",
     "\n",
     "\n",
-    "df[\"pred\"] = df[\"response\"].map(to_pred)\n",
-    "fail_mask = ~((df[\"pred\"] == 1) | (df[\"pred\"] == 0))\n",
-    "print(sum(fail_mask))\n",
-    "# df[fail_mask].head()\n",
-    "df_filtered = df[~fail_mask]\n",
-    "df_filtered = df_filtered.astype({\"pred\": int, \"label\": int})\n",
-    "print(\"acc: \", round(accuracy_score(df_filtered[\"label\"], df_filtered[\"pred\"]) * 100, 2))\n",
-    "print(\"f1: \", round(f1_score(df_filtered[\"label\"], df_filtered[\"pred\"]) * 100, 2))"
+    "for dataset in datasets:\n",
+    "    print(f\"----------------{dataset}----------------\")\n",
+    "    for num in case_num:\n",
+    "        try:\n",
+    "            print(f\"### shot_num={num} ###\")\n",
+    "            shot_num_indir = \"zero_shot\" if num == 0 else f\"few_shot_{num}\"\n",
+    "            file_path = f\"results/qwen-14b-chat/{dataset}/{shot_num_indir}/{'val' if dataset=='QQP' else 'test'}_0-999999.jsonl\"\n",
+    "            with open(file_path) as f:\n",
+    "                data = f.read()\n",
+    "            df = pd.read_json(StringIO(data), lines=True)\n",
+    "            df[\"pred\"] = df[\"response\"].map(to_pred)\n",
+    "            fail_mask = ~((df[\"pred\"] == 1) | (df[\"pred\"] == 0))\n",
+    "            print(\"failed: \", sum(fail_mask))\n",
+    "            # df[fail_mask].head()\n",
+    "            df_filtered = df[~fail_mask]\n",
+    "            df_filtered = df_filtered.astype({\"pred\": int, \"label\": int})\n",
+    "            print(\"acc: \", round(accuracy_score(df_filtered[\"label\"], df_filtered[\"pred\"]) * 100, 2))\n",
+    "            print(\"f1: \", round(f1_score(df_filtered[\"label\"], df_filtered[\"pred\"]) * 100, 2))\n",
+    "        except:\n",
+    "            print(\"unknown\")\n",
+    "            StringIO"
    ]
   },
   {
